test/badLhs4.slq
def main(){
	x:=0:ğ”¹;
	y:=0:ğ”¹;
	(x,y)[0]=0:ğ”¹; // error
}
